clean API for swapActionOrder
