# api.yaml
@@ -115,6 +115,22 @@ paths:
               schema:
                 $ref: '#/components/schemas/Empty'
           description: Action deleted
+  /api/action/swaporder:
+    post:
+      operationId: swapActionOrder
+      requestBody:
+        required: true
+        content:
+          application/x-www-form-urlencoded:
+            schema:
+              $ref: '#/components/schemas/SwapActionOrderContent'
+      responses:
+        '200':
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Empty'
+          description: Action order swapped
 openapi: 3.0.2
 components:
   schemas:
@@ -148,6 +164,13 @@ components:
       properties:
         resubmit:
           type: boolean
+    SwapActionOrderContent:
+      type: object
+      properties:
+        swapid:
+          type: integer
+        actionid:
+          type: integer
   securitySchemes:
     bearerAuth:
       type: http
